add test for question class